--- a/user-api/.classpath
+++ b/user-api/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
+	<classpathentry kind="src" output="target/classes" path="java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -29,6 +29,22 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/juanchi/.m2/repository/org/mockito/mockito-core/2.23.0/mockito-core-2.23.0.jar" sourcepath="C:/Users/juanchi/.m2/repository/org/mockito/mockito-core/2.23.0/mockito-core-2.23.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juan Cruz/.m2/repository/org/mockito/mockito-core/2.23.0/mockito-core-2.23.0.jar" sourcepath="C:/Users/juanchi/.m2/repository/org/mockito/mockito-core/2.23.0/mockito-core-2.23.0-sources.jar"/>
+	<classpathentry kind="src" path="target/generated-sources/annotations">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="m2e-apt" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="m2e-apt" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
